# aoh-calculator

./: .gitconfig  .gitignore  .pylintrc  CHANGES.md  Dockerfile  LICENSE  README.md  aohcalc.py  cleaning.py  config.json  download_habitat_map.py  download_zenodo_raster.py  extract_data_per_species.py  extract_species_data_psql.py  habitat_process.py  pyproject.toml  requirements.txt  validate.py
.claude/agents/: aoh-prevalence-diagnostician.md
.claude/commands/: diagnose-aoh-prevalence.md
.github/workflows/: pull-request.yml  python-package.yml
LIFE/: extract_species_psql.py  generate_crosswalk.py  make_arable_map.py  make_current_map.py  make_restore_map.py  species_prep.py
STAR/: cleaning.py  convert_crosswalk.py  extract_data_per_species.py  extract_species_data_psql.py
aoh/: __init__.py  aohcalc.py  cleaning.py  habitat_process.py
aoh/_internal/: __init__.py  _common.py  aoh_binary.py  aoh_fractional.py  aoh_iucn.py  aoh_simple.py  speciesinfo.py  utils.py
aoh/summaries/: __init__.py  endemism.py  species_richness.py
aoh/validation/: README.md  __init__.py  collate_data.py  fetch_gbif_data.py  validate_map_prevalence.py  validate_occurences.py
docs/: postgis.md  runsteps.md
docs/LIFE/: runsteps.md
docs/STAR/: postgis.md  runsteps.md
summaries/: endemism.py  species_richness.py
tests/: test_aoh_binary.py  test_aoh_fractional.py  test_aohcalc.py  test_aohcalc_iucn.py  test_aohcalc_simple.py  test_collate_data.py  test_crosswalk.py  test_filename.py  test_habitat_process.py  test_model_validation.py  test_occurences.py  test_species_richness.py  test_tidying.py
tests/testdata/collate_data/: 1.json  2.json
validation/: README.md  collate_data.py  validate_map_prevalence.py
