[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoh"
version = "1.1.0"
description = "A library for calculating Area of Habitat for species distribution mapping"
authors = [
    {name = "Michael Dales", email = "mwd24@cam.ac.uk"}
]
readme = "README.md"
license = "ISC"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["gis", "species", "habitat", "biodiversity", "ecology"]
dependencies = [
    "alive-progress",
    "numpy>=1.24,<3.0",
    "geopandas>=1.0,<2.0",
    "psutil",
    "pyproj>=3.4,<4.0",
    "scikit-image>=0.20,<1.0",
    "yirgacheffe>=1.9.1,<2.0",
    "zenodo_search",
    "pandas>=2.0,<3.0",
    "gdal[numpy]>=3.8,<3.12",
    "tomli",
]

[project.optional-dependencies]
validation = [
    "pymer4==0.8.2",
    "pygbif",
]
dev = [
    "pylint",
    "mypy",
    "pytest",
    "types-psutil",
    "types-requests",
    "types-shapely",
    "pandas-stubs",
    "geojson",
    "pytest-cov",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/quantifyearth/aoh-calculator"
Repository = "https://github.com/quantifyearth/aoh-calculator"
Issues = "https://github.com/quantifyearth/aoh-calculator/issues"

[project.scripts]
aoh-calc = "aoh.aohcalc:main"
aoh-habitat-process = "aoh.habitat_process:main"
aoh-species-richness = "aoh.summaries.species_richness:main"
aoh-endemism = "aoh.summaries.endemism:main"
aoh-collate-data = "aoh.validation.collate_data:main"
aoh-validate-prevalence = "aoh.validation.validate_map_prevalence:main"
aoh-validate-occurences = "aoh.validation.validate_occurences:main"
aoh-fetch-gbif-data = "aoh.validation.fetch_gbif_data:main"

[tool.setuptools]
packages = ["aoh", "aoh.summaries", "aoh.validation"]

[tool.setuptools.package-data]
aoh = ["py.typed"]
